<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical">
      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content" >
          <Button
              android:id="@+id/zoom_in"
              android:layout_width="34dp"
              android:layout_height="wrap_content"
              android:layout_alignParentLeft="true"
              android:text="@string/zoom_in" />   
          <Button
              android:id="@+id/zoom_out"
              android:layout_width="34dp"
              android:layout_height="wrap_content"
              android:layout_toRightOf="@+id/zoom_in"
              android:text="@string/zoom_out" />

          <Button
              android:id="@+id/prev"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignParentTop="true"
              android:layout_marginLeft="17dp"
              android:layout_toRightOf="@+id/zoom_out"
              android:text="@string/go_to_prev" />

          <Button
              android:id="@+id/next"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignParentTop="true"
              android:layout_marginRight="27dp"
              android:layout_toLeftOf="@+id/tilt_more"
              android:text="@string/go_to_next" />
          
          <Button
              android:id="@+id/tilt_more"
              android:layout_width="33dp"
              android:layout_height="wrap_content"
              android:layout_toLeftOf="@+id/tilt_less"
              android:text="@string/tilt_more" />
          <Button
              android:id="@+id/tilt_less"
              android:layout_width="33dp"
              android:layout_height="wrap_content"
              android:layout_alignParentRight="true"
              android:text="@string/tilt_less" />
          
      </RelativeLayout>
      
	  <fragment
	    android:id="@+id/map"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    class="com.google.android.gms.maps.MapFragment" />
</LinearLayout>