<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical">
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false">
    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
      android:orientation="vertical">            
      </LinearLayout>
    <RelativeLayout
      android:layout_width="0dp"
      android:layout_height="match_parent"
      android:gravity="center_horizontal"
      android:layout_weight="1">

      <Button
          android:id="@+id/pan_left"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentLeft="true"
          android:layout_alignParentTop="true"
          android:onClick="onPanLeft"
          android:text="@string/left_arrow" />

      <Button
          android:id="@+id/zoom_out"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentRight="true"
          android:layout_alignParentTop="true"
          android:onClick="onZoomOut"
          android:text="@string/zoom_out" />

      <Button
          android:id="@+id/pan_up"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentTop="true"
          android:layout_marginLeft="25dp"
          android:layout_toRightOf="@+id/pan_left"
          android:onClick="onPanUp"
          android:text="@string/up_arrow" />

      <Button
          android:id="@+id/pan_down"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentTop="true"
          android:layout_toRightOf="@+id/pan_left"
          android:onClick="onPanDown"
          android:text="@string/down_arrow" />

      <Button
          android:id="@+id/pan_right"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentTop="true"
          android:layout_toRightOf="@+id/pan_up"
          android:onClick="onPanRight"
          android:text="@string/right_arrow" />

    </RelativeLayout>
    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
      android:layout_gravity="right"
      android:orientation="vertical">
      <Button
        android:id="@+id/zoom_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onZoomIn"
        android:text="@string/zoom_in"/>
    </LinearLayout>
  </LinearLayout>
  <fragment
    android:id="@+id/streetviewpanorama"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    class="com.google.android.gms.maps.SupportStreetViewPanoramaFragment"/>
</LinearLayout>